Fix center map spelling

--- a/src/index.html
+++ b/src/index.html
@@ -192,8 +192,8 @@
 
 						<div x-show="$store.data.mapLoaded" style="display: none;" class="mt-2">
 							<button class="btn btn-outline-secondary" onclick="recenterMap()">
-								Recenter map
-							</button>
+								Center Map
+							</button><br>
 							<button 
 								class="btn btn-outline-primary mt-2" 
 								onclick="downloadMap(document.getElementById('mapcanvas'));"
