Reword full map link

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 
-						<h6 class="mt-2"><a href="https://maptool.ceschmitt.de/img/corekeeper_map.png" target="_blank">Show Full Map (Spoilers)</a></h6>
+						<h6 class="mt-2"><a href="https://maptool.ceschmitt.de/img/corekeeper_map.png" target="_blank">Open Full Map Image (Spoilers)</a></h6>
 
 						<div x-show="$store.data.mapLoaded" style="display: none;" class="mt-2">
 							<button class="btn btn-outline-secondary" onclick="recenterMap()">
