--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
 			<!-- HOW TO USE TOOL -->
 			<a href="https://www.youtube.com/watch?v=ZeM61AjhiS4" target="_blank">
-				<h5 class="d-flex align-items-center">
+				<button class="btn btn-outline-primary w-100 text-start d-flex align-items-center">
 					<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
 						<path fill="currentColor" d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z" />
 					</svg>
@@ -68,10 +68,25 @@
 						</span>
 						<small style="font-size: 10pt;">Video by Dakon the Mad</small>
 					</div>
-					
-				</h5>
+				</button>
+			</a>
 
-				<h5><a target="_blank" href="https://github.com/Ceddini/CoreKeeperMapTool/discussions">Feedback / Requests</a></h5>
+			<a target="_blank" href="https://github.com/Ceddini/CoreKeeperMapTool/discussions">
+				<button class="btn btn-outline-primary w-100 text-start mt-2 d-flex align-items-center">
+					<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
+						<path fill="currentColor" d="M9 22C8.4 22 8 21.6 8 21V18H4C2.9 18 2 17.1 2 16V4C2 2.9 2.9 2 4 2H20C21.1 2 22 2.9 22 4V16C22 17.1 21.1 18 20 18H13.9L10.2 21.7C10 21.9 9.8 22 9.5 22H9M10 16V19.1L13.1 16H20V4H4V16H10M16.3 6L14.9 9H17V13H13V8.8L14.3 6H16.3M10.3 6L8.9 9H11V13H7V8.8L8.3 6H10.3Z" />
+					</svg>
+					<span>Feedback / Requests</span>
+				</button>
+			</a>
+
+			<a target="_blank" href="https://linktr.ee/ceddini">
+				<button class="btn btn-outline-primary w-100 text-start mt-2">
+					<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
+						<path fill="currentColor" d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z" />
+					</svg>
+					<span>Support Me</span>
+				</button>
 			</a>
 
 			<hr>
